[package]
name = "mini_proj_8"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mini_proj_8"
path = "mini_proj_8/main.rs"

[lib]
name = "mini_proj_8"
path = "mini_proj_8/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
mysql_async = "0.32.2"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
